[gd_scene load_steps=17 format=3 uid="uid://c0cnqs3d0jrf0"]

[ext_resource type="Script" path="res://entities/neutral/Aghoy/Aghoy.gd" id="1_sbwc6"]
[ext_resource type="Resource" uid="uid://btmdjbd6f1yvw" path="res://entities/neutral/Aghoy/faction.tres" id="2_5hbix"]
[ext_resource type="Script" path="res://components/HealthBar.gd" id="3_mpy66"]
[ext_resource type="Texture2D" uid="uid://chks4dajgl1uv" path="res://asset_packs/PUNY_MONSTERS_v1/Aghoy.png" id="4_og7xv"]
[ext_resource type="Script" path="res://components/HitBox.gd" id="5_tgpxi"]
[ext_resource type="Script" path="res://components/HurtBox.gd" id="6_4sj13"]
[ext_resource type="Script" path="res://components/Movement.gd" id="8_6nc7y"]
[ext_resource type="Script" path="res://components/DirectionSelector.gd" id="9_j4g6b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5fjug"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jivgi"]
bg_color = Color(1, 0.254902, 0.490196, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_avdf0"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1cqyx"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e7q00"]
radius = 4.0

[sub_resource type="Animation" id="Animation_w7d2j"]
resource_name = "Hold"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_a42va"]
resource_name = "Move"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xgfcx"]
_data = {
"Hold": SubResource("Animation_w7d2j"),
"Move": SubResource("Animation_a42va")
}

[node name="Aghoy" type="CharacterBody2D"]
collision_layer = 129
collision_mask = 17
motion_mode = 1
script = ExtResource("1_sbwc6")
faction = ExtResource("2_5hbix")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -6.0
offset_top = -11.0
offset_right = 6.0
offset_bottom = -9.0
theme_override_styles/background = SubResource("StyleBoxFlat_5fjug")
theme_override_styles/fill = SubResource("StyleBoxFlat_jivgi")
max_value = 10.0
value = 10.0
show_percentage = false
script = ExtResource("3_mpy66")

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 256
collision_mask = 0
script = ExtResource("5_tgpxi")
dammage = -100.0
knockback_speed = -250.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_avdf0")

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 512
collision_mask = 32
script = ExtResource("6_4sj13")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_1cqyx")
debug_color = Color(0.905882, 0.215686, 0.537255, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e7q00")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, -5)
texture = ExtResource("4_og7xv")
hframes = 3
vframes = 4
frame = 2

[node name="Movement" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_6nc7y")
movement_speed = 16.0

[node name="DirectionSelector" type="Node2D" parent="."]
script = ExtResource("9_j4g6b")
frames = 4
lookup = Array[int]([2, 0, 1, 3])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_xgfcx")
}
autoplay = "Move"
